erDiagram
    ParkingLotMonitor ||..|| ParkingLot : has
    ParkingLotMonitor ||..|| ParkingLotLog : has
    ParkingLot ||..|| ParkingLotLog : has
    User ||..|| ParkingRequestLog : makes
    User {
        int Id PK
        string Username
        string Password
        string Email
        string FirstName
        string LastName
    }
    ParkingLotMonitor {
        int Id PK
        int ParkingLotId FK
        double ProbabilityParkingAvailable
        DataTime LastUpdated
        Boolean Status
    }
    ParkingLot {
        int Id PK
        string Name
        string Address
        string Image
        string Hours
        Boolean IsPaidParking
        string Latitude
        string Longitude
    }
    ParkingLotLog {
        int Id PK
        int ParkingLotId FK
        int LoggedByMonitorId FK
        int FreeParkingSpaces
        DateTime TimeStamp
    }
    ParkingRequestLog {
        int Id PK
        float AreaOfInterestLatitude
        float AreaOfInterestLongitude
        int UserId FK
        String UserIpAddress
        DateTime TimeStamp
    }
